# vault

./: README.md  project.sh  prompt.sh  pyproject.toml  test.py  upgrade.sh  vault.py
data/samples/: common_sense.txt  nietzsche_antichrist.txt
src/vault/: __init__.py  config.py  main.py  models.py  services.py  utils.py
src/vault/clients/database_clients/: base.py  duckdb.py
src/vault/clients/embedding_clients/: base.py  bedrock.py  openai.py
src/vault/clients/llm_clients/: base.py  bedrock.py  openai.py
src/vault/plugins/: __init__.py  atlassian.py  base_plugin.py  fs_plugin.py  web_pugin.py
tests/: test.sh
